spade-tests/src/snapshots/spade_tests__parser__macro_pattern_contains_unexpected_closing_bracket.snap
---
source: spade-tests/src/parser.rs
---
macro test(]) {}


error: Stray closing delimiter found while parsing macro pattern
  ┌─ testinput:1:12
  │
1 │ macro test(]) {}
  │            ^
  │            │
  │            `]` found with no matching `[`
